--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
           <div class="collapse navbar-collapse mr-5 col-lg-3" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active m-1 border border-secondary border-top-0 border-bottom-0 border-left-0">
-                <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="https://mflorez31.github.io/Bootstrap-Portfolio/index">About <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active m-1">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="https://mflorez31.github.io/Bootstrap-Portfolio/portfolio">Portfolio</a>
               </li>
               <li class="nav-item active m-1 border border-secondary border-top-0 border-bottom-0 border-right-0">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="https://mflorez31.github.io/Bootstrap-Portfolio/contact">Contact</a>
               </li>
             </ul>
     </nav>
@@ -35,6 +35,7 @@
         <div class="row pt-3">
           <div class="col-2"></div>
           <div class="col-lg-6 bg-light text-dark pt-2">
+            <h2 class= "text-info m-3 p-2 border border-secondary border-top-0 border-right-0 border-left-0">About</h2>
               <div class="row">
                 <div class="col-4">
                   <img src="assets/images/Image1.jpg">
